feat: Implement DolphinScheduler file upload tool with enhanced logging and error handling
- Added a new script `file_upload.py` for uploading files to DolphinScheduler.
- Implemented Base64 encoding removal for direct file uploads.
- Introduced configuration loading from both JSON and Python module.
- Added file existence checks and MD5 validation for integrity.
- Enhanced logging with detailed progress tracking and error reporting.
- Included support for batch uploads while preserving directory structure.
- Created a sample configuration generator for ease of use.

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "base_url": "http://14.103.67.28:12345",
-  "token": "your_access_token_here",
-  "tenant_id": 4,
+  "base_url": "http://14.103.67.28:12345/dolphinscheduler",
+  "token": "621a68a6631741b2c36919b0bb94c85d",
+  "tenant_id": 21,
   "parent_resource_id": -1,
   "log_level": "INFO",
   "auth_type": "token_header"
